--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <div class="seguros-item">
         <h3 class="font-1-xl cor-p1">OURO</h3>
         <span class="font-1-xl cor-0">R$299 <span class="font-1-xs cor-6">mensal</span></span>
-        <ul class="font-2-m cor-0">
+        <ul class="font-2-m cor-5">
           <li>Cinco trocas por ano</li>
           <li>Assistência especial/li>
           <li>Suporte 24h</li>
@@ -155,7 +155,7 @@
   </article>
 
   <footer class="footer-bg">
-    <div class="footer-container">
+    <div class="footer container">
       <img src="./img/bikcraft 2.svg" alt="">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
@@ -180,11 +180,11 @@
       <div class="footer-informações">
         <h3 class="font-2-l-b cor-0">Informações</h3>
         <nav>
-          <ul>
+          <ul class="font-2-m cor-5">
             <li><a href="./bicicletas.html">Bicicletas</a></li>
             <li><a href="./seguros.html">Seguros</a></li>
             <li><a href="./contato.html">Contato</a></li>
-            <li><a href="./contato.html">Termos e Condições</a></li>
+            <li><a href="./termos.html">Termos e Condições</a></li>
           </ul>
           </ul>
         </nav>
